--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="utf-8" />
     <style>
       /* GLOBAL STYLES */
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+      }
       h1 {
         font-size: 7vw;
         margin-top: 0;
@@ -22,48 +27,47 @@
       /* SOCIAL STYLES */
       .social-link {
         background: rgba(150, 150, 150, 0.5);
-        color: blue;
+        border-radius: 50%;
+        box-sizing: border-box;
+        color: #fff;
         display: inline-block;
-        height: 36px;
+        font-family: helvetica, arial, sans;
+        font-size: 1rem;
+        font-weight: bold;
+        height: 2.5em;
+        line-height: 1;
+        padding-top: 0.85em;
+        text-align: center;
+        text-decoration: none;
+        vertical-align: middle;
+        width: 2.5em;
       }
-
       .social-list {
         list-style: none;
         padding: 0;
         text-align: center;
       }
-
-      .social-list > li{
+      .social-list > li {
         display: inline-block;
+        margin: 0 0.5em;
       }
 
       /* BIO STYLES */
       .bio-wrapper {
         font-size: 24px;
-        margin: 0 auto 50px;
+        margin: auto;
         max-width: 960px;
         overflow: hidden;
       }
-      .bio-wrapper:after {
-        visibility: hidden;
-        display: block;
-        font-size: 0;
-        content: " ";
-        clear: both;
-        height: 0;
-      }
       .bio-box {
         border: 1px solid black;
+        border-color: black black red;
         box-sizing: border-box;
         float: left;
         font-size: 1rem;
         margin: 40px 1% 0;
-        padding: 2%;
+        padding: 0 2% 2%;
         width: 23%;
-      }
-
-      .bio-box > a {
-        color: #c68bf9;
       }
       .bio-box h3 {
         color: #fff;
@@ -73,9 +77,10 @@
       }
       .bio-box img {
         width: 100%;
-      } 
+      }
       .bio-copy {
         font-size: 1em;
+        line-height: 1.5;
       }
       .bio-copy a {
         color: green;
@@ -87,22 +92,22 @@
       <h1>I'm an h1</h1>
       <ul class="social-list">
         <li>
-          <a href="https://example.com/" class="social-link">Link1</a>
+          <a href="https://example.com/" class="social-link">Fb</a>
         </li>
         <li>
-          <a href="https://example.com/" class="social-link">Link2</a>
+          <a href="https://example.com/" class="social-link">Tw</a>
         </li>
         <li>
-          <a href="https://example.com/" class="social-link">Link3</a>
+          <a href="https://example.com/" class="social-link">Gh</a>
         </li>
       </ul>
     </div>
     <h2>I'm an h2</h2>
     <div class="bio-wrapper">
       <div class="bio-box">
-        <img src="http://place-puppy.com/400x400" alt="A cute puppy">
+        <img src="http://place-puppy.com/400x400" />
         <h3>Michael Hartl</h3>
-        <a href="https://twitter.com/mhartl" class="social-link">here</a>
+        <a href="https://twitter.com/mhartl" class="social-link">Tw</a>
         <div class="bio-copy">
           <p>
             Known for his dazzling charm, rapier wit, and unrivaled humility,
@@ -110,7 +115,11 @@
             <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a>
             and principal author of the
             <a href="https://learnenough.com/"> Learn Enough to Be Dangerous</a>
-            introductory sequence. Michael is also notorious as the founder of
+            introductory sequence.
+          </p>
+
+          <p>
+            Michael is also notorious as the founder of
             <a href="http://tauday.com/">Tau Day</a> and author of
             <a href="http://tauday.com/tau-manifesto"
               ><em>The Tau Manifesto</em></a
@@ -120,9 +129,9 @@
         </div>
       </div>
       <div class="bio-box">
-        <img src="http://place-puppy.com/400x400" alt="A cute puppy">
+        <img src="http://place-puppy.com/400x400" />
         <h3>Lee Donahoe</h3>
-        <a href="https://twitter.com/leedonahoe" class="social-link">here</a>
+        <a href="https://twitter.com/leedonahoe" class="social-link">Tw</a>
         <div class="bio-copy">
           <p>
             When he's not literally swimming with sharks or hunting powder
@@ -133,9 +142,9 @@
         </div>
       </div>
       <div class="bio-box">
-        <img src="http://place-puppy.com/400x400" alt="A cute puppy">
+        <img src="http://place-puppy.com/400x400" />
         <h3>Nick Merwin</h3>
-        <a href="https://twitter.com/nickmerwin" class="social-link">here</a>
+        <a href="https://twitter.com/nickmerwin" class="social-link">Tw</a>
         <div class="bio-copy">
           <p>
             You may have seen him shredding guitar live with Capital Cities on
@@ -146,40 +155,41 @@
         </div>
       </div>
       <div class="bio-box">
-        <img src="http://place-puppy.com/400x400" alt="A cute puppy">
+        <img src="http://place-puppy.com/400x400" />
         <h3>??</h3>
         <p>
           The Future
         </p>
       </div>
     </div>
-  </div>
-  <p>
-    Learn Enough to Be Dangerous is a leader in the movement to teach the
-    world <em>technical sophistication</em>, which includes both "hard
-    skills" like coding, command lines, and version control, and "soft
-     skills" like guessing keyboard shortcuts, Googling error messages, and
-    knowing when to just reboot the darn thing.
-  </p>
-  <p>
-    We believe there are <strong>at least a billion people</strong> who can
-    benefit from learning technical sophistication, probably more. To join
-    our movement,
-    <a href="https://learnenough.com/#email_list">sign up for our official
-    email list</a> now.
-  </p>
-  <h3>Background</h3>
-  <p>
-    Learn Enough to Be Dangerous is an outgrowth of the
-    <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a> and the
-    <a href="https://www.softcover.io/">Softcover publishing platform</a>.
-    This page is part of the sample site for
-    <a href="https://learnenough.com/css-tutorial"><em>Learn Enough CSS and
-    Layout to Be Dangerous</em></a>, which teaches the basics of
-    <strong>C</strong>ascading <strong>S</strong>tyle
-    <strong>S</strong>heets, the language that allows web pages to be styled.
-    Other related tutorials can be found at
-    <a href="https://learnenough.com/">learnenough.com</a>.
-  </p>
+    <p>
+      Learn Enough to Be Dangerous is a leader in the movement to teach the
+      world <em>technical sophistication</em>, which includes both "hard skills"
+      like coding, command lines, and version control, and "soft skills" like
+      guessing keyboard shortcuts, Googling error messages, and knowing when to
+      just reboot the darn thing.
+    </p>
+    <p>
+      We believe there are <strong>at least a billion people</strong> who can
+      benefit from learning technical sophistication, probably more. To join our
+      movement,
+      <a href="https://learnenough.com/#email_list"
+        >sign up for our official email list</a
+      >
+      now.
+    </p>
+    <h3>Background</h3>
+    <p>
+      Learn Enough to Be Dangerous is an outgrowth of the
+      <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a> and
+      the <a href="https://www.softcover.io/">Softcover publishing platform</a>.
+      This page is part of the sample site for
+      <a href="https://learnenough.com/css-tutorial"
+        ><em>Learn Enough CSS and Layout to Be Dangerous</em></a
+      >, which teaches the basics of <strong>C</strong>ascading
+      <strong>S</strong>tyle <strong>S</strong>heets, the language that allows
+      web pages to be styled. Other related tutorials can be found at
+      <a href="https://learnenough.com/">learnenough.com</a>.
+    </p>
   </body>
 </html>
